hw3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-hw3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-hw3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: my-app-hw3
    spec:
      hostNetwork: true
      serviceAccountName: kubedoom
      containers:
      - image: storaxdev/kubedoom:0.5.0
        name: kubedoom
        ports:
        - containerPort: 5900 
          protocol: TCP
