hw4.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-deployment-hw4
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: my-app-hw4
  strategy: 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template: 
    metadata: 
      labels: 
        app: my-app-hw4
    spec: 
      containers: 
        - image: postgres:10.13
          name: my-postgres
          volumeMounts:
            - 
              name: data
              mountPath: /var/lib/postgresql/data/pgdata
          
          ports: 
            - 
              containerPort: 5432
              protocol: TCP
      volumes:
       - name: data
         emptyDir: {}
