hw5_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: my-deployment-hw5
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: my-app-hw5
  strategy: 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template: 
    metadata: 
      labels: 
        app: my-app-hw5
    spec: 
      containers: 
        - image: redmine:4.1.1
          name: my-redmine
          volumeMounts:
            - 
              name: data
              mountPath: /var/lib/postgresql/data/pgdata
          ports: 
            - 
              containerPort: 3000
              protocol: TCP
      volumes:
       - name: data
         emptyDir: {}
