hw5_2_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-serv
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: my-deployment-hw5
  type: ClusterIP
