ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: my-host.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redmine-serv
            port: 
              number: 3000
      - path: /database
        pathType: Prefix
        backend:
          service:
            name: database
            port:
              number: 5432
